--- a/index.html
+++ b/index.html
@@ -139,6 +139,83 @@
               </button>
             </div>
           </div>
+          <div class="course-list">
+            <!-- item1 -->
+            <div class="course-item">
+              <a href="#!"><img
+                src="./assets/img/course-1.png"
+                alt="Basic web design"
+                class="thump"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item2 -->
+            <div class="course-item">
+              <a href="#!"><img
+                src="./assets/img/course-2.png"
+                alt="UI/UX design"
+                class="thump"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item3 -->
+            <div class="course-item">
+              <a href="#!"><img
+                src="./assets/img/course-3.png"
+                alt="Web App design"
+                class="thump"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">Web App design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
