--- a/index.html
+++ b/index.html
@@ -250,7 +250,11 @@
               <!-- khối bên phải -->
 
               <div class="content">
-                <img src="./assets/icon/nhaykep.svg" alt="" class="open-quotes" />
+                <img
+                  src="./assets/icon/nhaykep.svg"
+                  alt=""
+                  class="open-quotes"
+                />
                 <blockquote>
                   Not only does my resume look impressive—filled with the names
                   and logos of world-class institutions—but these certificates
@@ -276,7 +280,11 @@
               <!-- khối bên phải -->
 
               <div class="content">
-                <img src="./assets/icon/nhaykep.svg" alt="" class="open-quotes" />
+                <img
+                  src="./assets/icon/nhaykep.svg"
+                  alt=""
+                  class="open-quotes"
+                />
                 <blockquote>
                   Not only does my resume look impressive—filled with the names
                   and logos of world-class institutions—but these certificates
@@ -302,7 +310,11 @@
               <!-- khối bên phải -->
 
               <div class="content">
-                <img src="./assets/icon/nhaykep.svg" alt="" class="open-quotes" />
+                <img
+                  src="./assets/icon/nhaykep.svg"
+                  alt=""
+                  class="open-quotes"
+                />
                 <blockquote>
                   Not only does my resume look impressive—filled with the names
                   and logos of world-class institutions—but these certificates
@@ -310,6 +322,29 @@
                   skills I've learned."
                 </blockquote>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- features -->
+      <div class="features">
+        <div class="main-content">
+          <div class="body">
+            <div class="images">
+              <img class="lower" src="./assets/img/learn1.png " alt="" />
+              <img src="./assets/img/learn2.png" alt="" />
+            </div>
+            <div class="content">
+              <h2 class="heading-lv2">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <a href="#!" class="btn cta-btn">Sign Up</a>
             </div>
           </div>
         </div>
