--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         </div>
       </div>
       <!-- features 2 -->
-       <div class="features features-2nd">
+      <div class="features features-2nd">
         <div class="main-content">
           <div class="body">
             <div class="images">
@@ -358,12 +358,73 @@
             </div>
             <div class="content">
               <h2 class="heading-lv2">
-                Take the next step toward your personal and professional goals with Lesson.
+                Take the next step toward your personal and professional goals
+                with Lesson.
               </h2>
               <p class="desc">
-                Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
               </p>
               <a href="#!" class="btn cta-btn">Join Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- blogs -->
+      <div class="blogs">
+        <div class="main-content">
+          <div class="blog-top">
+            <h2 class="heading-lv2">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+          <div class="blog-list">
+            <!-- item1 -->
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/stu1.png" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <a href="#!" class="btn">Read More</a></a
+                >
+              </div>
+            </div>
+            <!-- item2 -->
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/stu2.png" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <a href="#!" class="btn">Read More</a></a
+                >
+              </div>
+            </div>
+            <!-- item3 -->
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/stu3.png" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <a href="#!" class="btn">Read More</a></a
+                >
+              </div>
             </div>
           </div>
         </div>
