p13 code blog#2 finish

--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
                 <span class="date">21 November 2021</span>
                 <a href="#!"
                   ><h3 class="title">
-                    How to become a pro web designer in 2022 and get remot job?
+                    How to become a pro web designer in 2022 and get remote job?
                   </h3>
-                  <a href="#!" class="btn">Read More</a></a
+                  <a href="#!" class="btn">Learn More</a></a
                 >
               </div>
             </div>
@@ -405,9 +405,9 @@
                 <span class="date">21 November 2021</span>
                 <a href="#!"
                   ><h3 class="title">
-                    How to become a pro web designer in 2022 and get remot job?
+                    How to become a pro web designer in 2022 and get remote job?
                   </h3>
-                  <a href="#!" class="btn">Read More</a></a
+                  <a href="#!" class="btn">Learn More</a></a
                 >
               </div>
             </div>
@@ -420,12 +420,18 @@
                 <span class="date">21 November 2021</span>
                 <a href="#!"
                   ><h3 class="title">
-                    How to become a pro web designer in 2022 and get remot job?
+                    How to become a pro web designer in 2022 and get remote job?
                   </h3>
-                  <a href="#!" class="btn">Read More</a></a
+                  <a href="#!" class="btn">Learn More</a></a
                 >
               </div>
             </div>
+            
+          </div>
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot active"></span>
+            <span class="dot"></span>
           </div>
         </div>
       </div>
